--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://myon-mcgee.github.io/site",
-  "name": "site",
+  "name": "myon-mcgee.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
